--- a/SwiftBar/SwiftBar.entitlements
+++ b/SwiftBar/SwiftBar.entitlements
@@ -6,5 +6,7 @@
 	<false/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
+    <key>com.apple.security.temporary-exception.apple-events:before:10.8</key>
+    <string>com.apple.Terminal</string>
 </dict>
 </plist>
