--- a/SwiftBar/SwiftBar.entitlements
+++ b/SwiftBar/SwiftBar.entitlements
@@ -8,5 +8,7 @@
 	<true/>
 	<key>com.apple.security.temporary-exception.apple-events:before:10.8</key>
 	<string>com.apple.Terminal</string>
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
 </dict>
 </plist>
