--- a/SwiftBar/Resources/SwiftBar.entitlements
+++ b/SwiftBar/Resources/SwiftBar.entitlements
@@ -4,11 +4,13 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<false/>
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
+	<true/>
+	<key>com.apple.security.personal-information.calendars</key>
 	<true/>
 	<key>com.apple.security.temporary-exception.apple-events:before:10.8</key>
 	<string>com.apple.Terminal</string>
-	<key>com.apple.security.automation.apple-events</key>
-	<true/>
 </dict>
 </plist>
