--- a/SwiftBar/Resources/SwiftBar MAS.entitlements
+++ b/SwiftBar/Resources/SwiftBar MAS.entitlements
@@ -6,7 +6,14 @@
 	<true/>
 	<key>com.apple.security.automation.apple-events</key>
 	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
 	<key>com.apple.security.temporary-exception.apple-events:before:10.8</key>
 	<string>com.apple.Terminal</string>
+	<key>com.apple.security.temporary-exception.files.home-relative-path.read-onlycom.apple.security.temporary-exception.files.home-relative-path.read-only</key>
+	<array>
+		<string>/bin</string>
+		<string>/etc/profile</string>
+	</array>
 </dict>
 </plist>
