--- a/SwiftBar/Resources/SwiftBar MAS.entitlements
+++ b/SwiftBar/Resources/SwiftBar MAS.entitlements
@@ -8,6 +8,8 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
 	<key>com.apple.security.temporary-exception.apple-events:before:10.8</key>
 	<string>com.apple.Terminal</string>
 	<key>com.apple.security.temporary-exception.files.home-relative-path.read-onlycom.apple.security.temporary-exception.files.home-relative-path.read-only</key>
