--- a/SwiftBar/Resources/SwiftBar MAS.entitlements
+++ b/SwiftBar/Resources/SwiftBar MAS.entitlements
@@ -12,10 +12,10 @@
 	<true/>
 	<key>com.apple.security.temporary-exception.apple-events:before:10.8</key>
 	<string>com.apple.Terminal</string>
-	<key>com.apple.security.temporary-exception.files.home-relative-path.read-onlycom.apple.security.temporary-exception.files.home-relative-path.read-only</key>
+	<key>com.apple.security.temporary-exception.files.absolute-path.read-only</key>
 	<array>
-		<string>/bin</string>
-		<string>/etc/profile</string>
+		<string>/bin/zsh</string>
+		<string>/etc/</string>
 	</array>
 </dict>
 </plist>
