--- a/SwiftBar/Resources/SwiftBar MAS.entitlements
+++ b/SwiftBar/Resources/SwiftBar MAS.entitlements
@@ -14,8 +14,12 @@
 	<string>com.apple.Terminal</string>
 	<key>com.apple.security.temporary-exception.files.absolute-path.read-only</key>
 	<array>
-		<string>/bin/zsh</string>
-		<string>/etc/</string>
+		<string>/bin/</string>
+		<string>/opt/homebrew/bin/</string>
+	</array>
+	<key>com.apple.security.temporary-exception.files.home-relative-path.read-only</key>
+	<array>
+		<string>/Library/Containers/com.ameba.SwiftBar/Data/Library/Application Support/SwiftBar MAS/AppStore Plugins/</string>
 	</array>
 </dict>
 </plist>
