--- a/SwiftBar/Resources/Info.plist
+++ b/SwiftBar/Resources/Info.plist
@@ -37,6 +37,7 @@
 		<string>EnablePluginIntent</string>
 		<string>DisablePluginIntent</string>
 		<string>ReloadPluginIntent</string>
+		<string>SetEphemeralPluginIntent</string>
 	</array>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
@@ -53,11 +54,19 @@
 	<string>Allow SwiftBar to run plugin in Terminal</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Allow SwiftBar to access your Calendar. This is required by one of your plugins.</string>
-	<key>NSRemindersUsageDescription</key>
-	<string>Allow SwiftBar to access your Reminders. This is required by one of your plugins.</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright ©2020-2022 Ameba Labs. All rights reserved.</string>
+	<string>Copyright ©2020-2023 Ameba Labs. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>Allow SwiftBar to access your Reminders. This is required by one of your plugins.</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>DisablePluginIntent</string>
+		<string>EnablePluginIntent</string>
+		<string>GetPluginsIntent</string>
+		<string>ReloadPluginIntent</string>
+		<string>SetEphemeralPluginIntent</string>
+	</array>
 </dict>
 </plist>
